--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,10 +16,13 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
+      - name: Extract tag name
+        run: echo ::set-env name=TAG_NAME::$(basename $GITHUB_REF)
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ansible-runner:${{ github.event_name == 'push' && contains(github.event.ref, 'refs/tags/') && github.ref }} 
+          tags: ansible-runner:${{ env.TAG_NAME }}
