--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,10 +25,17 @@ jobs:
         run: echo ::set-output name=TAG_NAME::$(cat tag.txt)
         shell: bash
         
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ansible-runner:${{ steps.read_tag.outputs.TAG_NAME }}
+          tags: ghcr.io/aymengazzahe/ansible-runner:${{ steps.read_tag.outputs.TAG_NAME }}
